AsyncImageView with placeholder and completion block
Finished initial project for AsyncImageView for public use

--- a/AsyncImageViewSample/Base.lproj/Main.storyboard
+++ b/AsyncImageViewSample/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HiE-5h-RIk">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--AsyncImageView-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AsyncImageViewSample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,96 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="76" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NKB-Ue-LWu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="76" id="xIb-xz-Mok">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="76"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xIb-xz-Mok" id="boU-LG-mvy">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="johndoe@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhb-uT-1k7">
+                                                    <rect key="frame" x="68" y="37" width="139.5" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YCh-QB-cld">
+                                                    <rect key="frame" x="16" y="15" width="44" height="44"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="Jvi-ST-5Th"/>
+                                                        <constraint firstAttribute="height" constant="44" id="M85-nr-4f2"/>
+                                                        <constraint firstAttribute="width" constant="44" id="v5f-On-3m7"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="vqQ-I5-haD"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="22"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ef3-en-mpM">
+                                                    <rect key="frame" x="68" y="16" width="291" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Jhb-uT-1k7" firstAttribute="top" secondItem="ef3-en-mpM" secondAttribute="bottom" id="2ux-92-uMN"/>
+                                                <constraint firstItem="ef3-en-mpM" firstAttribute="top" secondItem="boU-LG-mvy" secondAttribute="top" constant="16" id="Kp1-Za-vAN"/>
+                                                <constraint firstItem="YCh-QB-cld" firstAttribute="leading" secondItem="boU-LG-mvy" secondAttribute="leading" constant="16" id="L3p-0m-xiG"/>
+                                                <constraint firstItem="YCh-QB-cld" firstAttribute="top" secondItem="boU-LG-mvy" secondAttribute="top" constant="15" id="eut-3a-pMA"/>
+                                                <constraint firstAttribute="trailing" secondItem="ef3-en-mpM" secondAttribute="trailing" constant="16" id="gys-Mn-rjK"/>
+                                                <constraint firstAttribute="bottom" secondItem="YCh-QB-cld" secondAttribute="bottom" constant="16" id="nrb-qq-BKO"/>
+                                                <constraint firstItem="Jhb-uT-1k7" firstAttribute="leading" secondItem="ef3-en-mpM" secondAttribute="leading" id="qnv-QZ-L59"/>
+                                                <constraint firstItem="ef3-en-mpM" firstAttribute="leading" secondItem="YCh-QB-cld" secondAttribute="trailing" constant="8" id="sUM-te-C7N"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NKB-Ue-LWu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="0ZF-9G-jqA"/>
+                            <constraint firstItem="NKB-Ue-LWu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Csr-Od-PcN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NKB-Ue-LWu" secondAttribute="bottom" id="lzB-Kq-xAk"/>
+                            <constraint firstAttribute="trailing" secondItem="NKB-Ue-LWu" secondAttribute="trailing" id="uGi-mn-7rR"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="AsyncImageView" id="g2C-tt-OZG"/>
+                    <connections>
+                        <outlet property="tableView" destination="NKB-Ue-LWu" id="09b-Dp-Gls"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1039.2" y="777.66116941529242"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MD5-dz-6rR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HiE-5h-RIk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5NX-HD-BrE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="08p-fY-Je1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5jB-js-nx1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="112.8" y="777.66116941529242"/>
         </scene>
     </scenes>
 </document>
